--- a/css/page_settings.css
+++ b/css/page_settings.css
@@ -35,7 +35,7 @@
   /* --main-text-font: 'Shippori Mincho'; メインフォント */
   /* --main-text-font: "Noto Sans JP"; */
   --main-text-font: "YuMincho02-R", sans-serif;
-  --header-font: "dnp-shuei-mincho-pr6", sans-serif;
+  --header-font: "DNP秀英初号明朝Std", sans-serif;
   /* --header-font: "Zen Maru Gothic"; */
 
 
