--- a/css/main.css
+++ b/css/main.css
@@ -175,10 +175,11 @@ section:has(hr:last-child) + section > h3:first-child {
 }
 
 p {
-  text-indent: 1em;
   text-align: justify;
-  margin-block: 0;
-  hanging-punctuation: force-end;
+  margin: 0;
+  text-indent: 1em;
+  text-spacing-trim: trim-start;
+  hanging-punctuation: first;
   /* font-family: "Open Sans", "こぶりなゴシック StdN W1", "UD デジタル 教科書体 N-B", "Noto Sans JP"; */
 }
 
